docs-archive/apache-airflow-providers-amazon/9.28.0/_sources/_api/airflow/providers/amazon/aws/operators/glue_catalog/index.rst.txt
airflow.providers.amazon.aws.operators.glue_catalog
===================================================

.. py:module:: airflow.providers.amazon.aws.operators.glue_catalog

.. autoapi-nested-parse::

   AWS Glue Data Catalog operators.



Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.glue_catalog.GlueCatalogCreateDatabaseOperator
   airflow.providers.amazon.aws.operators.glue_catalog.GlueCatalogDeleteDatabaseOperator
   airflow.providers.amazon.aws.operators.glue_catalog.GlueCatalogCreateTableOperator
   airflow.providers.amazon.aws.operators.glue_catalog.GlueCatalogDeleteTableOperator


Module Contents
---------------

.. py:class:: GlueCatalogCreateDatabaseOperator(*, database_name, description = None, location_uri = None, parameters = None, catalog_id = None, tags = None, if_exists = 'skip', **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Create a database in the AWS Glue Data Catalog.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCatalogCreateDatabaseOperator`

   :param database_name: The name of the database to create.
   :param description: A description of the database.
   :param location_uri: The location of the database (e.g. an S3 path).
   :param parameters: Key-value pairs that define properties of the database.
   :param catalog_id: The ID of the Data Catalog. Defaults to the account ID.
   :param tags: Tags to assign to the database.
   :param if_exists: Behavior when the database already exists.
       ``"fail"`` raises an error, ``"skip"`` logs and returns the database name.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: database_name


   .. py:attribute:: description
      :value: None



   .. py:attribute:: location_uri
      :value: None



   .. py:attribute:: parameters
      :value: None



   .. py:attribute:: catalog_id
      :value: None



   .. py:attribute:: tags
      :value: None



   .. py:attribute:: if_exists
      :value: 'skip'



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GlueCatalogDeleteDatabaseOperator(*, database_name, catalog_id = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Delete a database from the AWS Glue Data Catalog.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCatalogDeleteDatabaseOperator`

   :param database_name: The name of the database to delete.
   :param catalog_id: The ID of the Data Catalog. Defaults to the account ID.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: database_name


   .. py:attribute:: catalog_id
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GlueCatalogCreateTableOperator(*, database_name, table_name, table_input, catalog_id = None, if_exists = 'skip', **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Create a table in an AWS Glue Data Catalog database.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCatalogCreateTableOperator`

   :param database_name: The name of the database. (templated)
   :param table_name: The name of the table. (templated)
   :param table_input: The ``TableInput`` dict defining the table schema, storage, etc. (templated)
   :param catalog_id: The ID of the Data Catalog. Defaults to the account ID. (templated)
   :param if_exists: Behavior when the table already exists.
       ``"fail"`` raises an error, ``"skip"`` logs and returns.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: template_fields_renderers


   .. py:attribute:: database_name


   .. py:attribute:: table_name


   .. py:attribute:: table_input


   .. py:attribute:: catalog_id
      :value: None



   .. py:attribute:: if_exists
      :value: 'skip'



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GlueCatalogDeleteTableOperator(*, database_name, table_name, catalog_id = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Delete a table from an AWS Glue Data Catalog database.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCatalogDeleteTableOperator`

   :param database_name: The name of the database. (templated)
   :param table_name: The name of the table to delete. (templated)
   :param catalog_id: The ID of the Data Catalog. Defaults to the account ID. (templated)


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: database_name


   .. py:attribute:: table_name


   .. py:attribute:: catalog_id
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



